Avoid cutting off text on mobile.

--- a/app.css
+++ b/app.css
@@ -1,5 +1,6 @@
 body {
   font-family: Ubuntu, roboto, noto, avenir next, avenir, helvetica neue, helvetica, sans-serif;
+  font-size: 18px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,6 +9,7 @@ body {
 }
 
 section {
+  width: 100%;
   max-width: 800px;
   display: flex;
   flex-direction: column;
@@ -20,7 +22,6 @@ ul {
 }
 
 li.pane {
-  max-width: 800px;
   border-radius: 8px;
   margin-bottom: 2em;
   background-color: hsl(35, 10%, 16%);
@@ -29,16 +30,8 @@ li.pane {
   padding-top: 1.2em;
   padding-bottom: 1.2em;
   margin-bottom: 2em;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.pane pre {
   color: hsl(47.8, 100%, 54.7%);
-  font-family: Ubuntu, roboto, noto, avenir next, avenir, helvetica neue, helvetica, sans-serif;
-  margin: 0;
+  width: 30em;
 }
 
 li.pane:only-child {
@@ -68,4 +61,8 @@ footer > div {
   .media {
     max-width: 90%;
   }
+  li.pane {
+    width: initial;
+  }
+  font-size: 12px;
 }
